[package]
name = "can-parser"
version = "0.1.0"
edition = "2021"
author = "Moritz Hüllmann"
about = "Parses CAN log data to HDF5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
hdf5 = "0.8.1"
miette = { version = "5", features = ["fancy"] }
nom = "7.1.3"
nom-supreme = "0.8"
nom_locate = "4"
thiserror = "1.0.39"
