[package]
name = "can-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
hdf5 = "0.8.1"
humansize = "2.1.3"
log = "0.4.17"
miette = { version = "5", features = ["fancy"] }
nom = "7.1.3"
nom-supreme = "0.8"
nom_locate = "4"
pretty_env_logger = "0.4.0"
thiserror = "1.0.39"

[profile.release-with-debug]
inherits = "release"
debug = true

